update logic createUserTypeSpecifications